# disruption

./: .gitignore  README.md
model_tuning/: CMakeLists.txt  README.md  run.sh
model_tuning/experiments/basic_check/: basic_check.ipynb
model_tuning/experiments/convergence_in_time/: convergence.html  convergence.ipynb  epsilon_versions.html  epsilon_versions.ipynb  resolution_in_space.html  resolution_in_space.ipynb
model_tuning/experiments/different_materials/: different_materials_finer_h.html  different_materials_finer_h.ipynb  finer_grids.html  finer_grids.ipynb  three_materials.html  three_materials.ipynb
model_tuning/experiments/energy/: energy.ipynb
model_tuning/experiments/time_step/: adaptation.ipynb  adaptation_birth.html  adaptation_birth.ipynb  adaptation_growth.html  adaptation_growth.ipynb  approaches_check.html  approaches_check.ipynb  report_figures.ipynb  stability_approach.ipynb
model_tuning/experiments/time_step_precise/: adaptation_birth_precise.html  adaptation_birth_precise.ipynb  adaptation_birth_precise_article_bw.ipynb  preprint_figures.ipynb
model_tuning/parameters_table/: README.md  parameters.ipynb  параметры_материалов.odt
model_tuning/scripts/: free_energy.py  model.py  model_plot.py  norms.py
model_tuning/sources/: defines.h  main.cpp
one_dim_problem/: CMakeLists.txt  build.sh  one_dim.cpp  run.sh
one_dim_problem/examples/: comparison.html  comparison.ipynb  comparison_v2.html  graphics.html  graphics.ipynb
one_dim_problem/scripts/: model.py  model_plot.py  norms.py
one_dim_problem/sources/: main.cpp  one_dim.cpp
(+481 files in other folders)
